--- a/programs/5.5-multioutput.ipynb
+++ b/programs/5.5-multioutput.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a Multi Input Network\n",
+    "# Creating a Multi Ouput Network\n",
     "\n",
     "Author: Pierre Nugues"
    ]
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "In the lab on named entity recognition, we used the words to predict the named entities. We will now use two inputs: The words and the parts of speech."
+    "In the lab on named entity recognition, we used the words to predict the parts of speech and the named entities. The network will have one input and two outputs.\n"
    ]
   },
   {
@@ -196,9 +196,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_pos, Y_ner = build_sequences(train_dict, key_x='ppos', key_y='ner')\n",
-    "print('First sentence, words', X_pos[1])\n",
+    "Y_pos, Y_ner = build_sequences(train_dict, key_x='ppos', key_y='ner')\n",
+    "print('First sentence, words', Y_pos[1])\n",
     "print('First sentence, POS', Y_ner[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_words[1]"
    ]
   },
   {
@@ -215,7 +224,7 @@
    "outputs": [],
    "source": [
     "word_set = sorted(list(set([item for sublist in X_words for item in sublist])))\n",
-    "pos_set = sorted(list(set([item for sublist in X_pos for item in sublist])))\n",
+    "pos_set = sorted(list(set([item for sublist in Y_pos for item in sublist])))\n",
     "ner_set = sorted(list(set([item for sublist in Y_ner for item in sublist])))\n",
     "print(len(word_set))\n",
     "print(len(pos_set))\n",
@@ -238,11 +247,11 @@
    "outputs": [],
    "source": [
     "rev_word_idx = dict(enumerate(word_set, start=2))\n",
-    "rev_ner_idx = dict(enumerate(ner_set, start=2))\n",
     "rev_pos_idx = dict(enumerate(pos_set, start=2))\n",
+    "rev_ner_idx = dict(enumerate(ner_set, start=2))\n",
     "word_idx = {v: k for k, v in rev_word_idx.items()}\n",
-    "ner_idx = {v: k for k, v in rev_ner_idx.items()}\n",
-    "pos_idx = {v: k for k, v in rev_pos_idx.items()}"
+    "pos_idx = {v: k for k, v in rev_pos_idx.items()}\n",
+    "ner_idx = {v: k for k, v in rev_ner_idx.items()}"
    ]
   },
   {
@@ -267,7 +276,7 @@
    "outputs": [],
    "source": [
     "print(X_words[1])\n",
-    "print(X_pos[1])\n",
+    "print(Y_pos[1])\n",
     "Y_ner[1]"
    ]
   },
@@ -277,8 +286,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_pos_idx = [list(map(lambda x: pos_idx.get(x, 1), x)) for x in X_pos]\n",
     "X_words_idx = [list(map(lambda x: word_idx.get(x, 1), x)) for x in X_words]\n",
+    "Y_pos_idx = [list(map(lambda x: pos_idx.get(x, 1), x)) for x in Y_pos]\n",
     "Y_ner_idx = [list(map(lambda x: ner_idx.get(x, 1), x)) for x in Y_ner]"
    ]
   },
@@ -296,7 +305,7 @@
    "outputs": [],
    "source": [
     "print(X_words_idx[1])\n",
-    "print(X_pos_idx[1])\n",
+    "print(Y_pos_idx[1])\n",
     "Y_ner_idx[1]"
    ]
   },
@@ -313,8 +322,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_pos_idx = pad_sequences(X_pos_idx)\n",
     "X_words_idx = pad_sequences(X_words_idx)\n",
+    "Y_pos_idx = pad_sequences(Y_pos_idx)\n",
     "Y_ner_idx = pad_sequences(Y_ner_idx)"
    ]
   },
@@ -325,7 +334,7 @@
    "outputs": [],
    "source": [
     "print(X_words_idx[1])\n",
-    "print(X_pos_idx[1])\n",
+    "print(Y_pos_idx[1])\n",
     "Y_ner_idx[1]"
    ]
   },
@@ -333,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We create one encodings for the output"
+    "### We create one encodings for the outputs"
    ]
   },
   {
@@ -342,10 +351,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_ner_idx_cat = to_categorical(Y_ner_idx)\n",
-    "print(Y_ner_idx_cat[1])\n",
-    "print(Y_ner_idx_cat[1][0])\n",
-    "Y_ner_idx_cat[1][-1]"
+    "Y_pos_idx_cat = to_categorical(Y_pos_idx)\n",
+    "Y_ner_idx_cat = to_categorical(Y_ner_idx)"
    ]
   },
   {
@@ -372,14 +379,15 @@
     "text_input = Input(shape=(None,), dtype='int32', name='text')\n",
     "embedded_text = layers.Embedding(text_vocabulary_size, \n",
     "                                 64, mask_zero=True)(text_input)\n",
-    "encoded_text = layers.LSTM(32, return_sequences=True)(embedded_text)"
+    "encoded_text = layers.LSTM(32, \n",
+    "                           return_sequences=True)(embedded_text)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The POS input"
+    "### The POS output"
    ]
   },
   {
@@ -389,35 +397,16 @@
    "outputs": [],
    "source": [
     "pos_vocabulary_size = len(pos_set) + 2\n",
-    "pos_input = Input(shape=(None,),\n",
-    "                       dtype='int32',\n",
-    "                       name='pos')\n",
-    "embedded_pos = layers.Embedding(pos_vocabulary_size, \n",
-    "                                32, mask_zero=True)(pos_input)\n",
-    "encoded_pos = layers.LSTM(16, return_sequences=True)(embedded_pos)"
+    "pos_output = layers.Dense(pos_vocabulary_size,\n",
+    "                      activation='softmax',\n",
+    "                  name='pos')(encoded_text)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We concatenate the two parts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "concatenated = layers.concatenate([encoded_text, encoded_pos],axis=-1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The common part"
+    "### The NER output"
    ]
   },
   {
@@ -427,12 +416,28 @@
    "outputs": [],
    "source": [
     "ner_vocabulary_size = len(ner_set) + 2\n",
-    "ner = layers.Dense(ner_vocabulary_size,\n",
-    "                      activation='softmax')(concatenated)\n",
-    "\n",
-    "model = Model([text_input, pos_input], ner)\n",
+    "ner_output = layers.Dense(ner_vocabulary_size,\n",
+    "                          activation='softmax',\n",
+    "                          name='ner')(encoded_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Model(text_input, [pos_output, ner_output])\n",
     "model.compile(optimizer='rmsprop',\n",
-    "              loss='categorical_crossentropy',\n",
+    "              loss=['categorical_crossentropy', \n",
+    "                    'categorical_crossentropy'],\n",
     "              metrics=['acc'])"
    ]
   },
@@ -449,8 +454,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit({'text': X_words_idx, 'pos': X_pos_idx}, Y_ner_idx_cat,\n",
-    "                  epochs=3, batch_size=128)"
+    "model.fit(X_words_idx, \n",
+    "          {'pos':Y_pos_idx_cat, 'ner':Y_ner_idx_cat},\n",
+    "          epochs=5, batch_size=128)"
    ]
   }
  ],
