--- a/programs/5.2-monoinput.ipynb
+++ b/programs/5.2-monoinput.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a Multi Input Network\n",
+    "# A Sequential Network for Named Entity Recognition\n",
     "\n",
     "Author: Pierre Nugues"
    ]
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "In the lab on named entity recognition, we used the words to predict the named entities. We will now use two inputs: The words and the parts of speech."
+    "In the lab on named entity recognition, we used the words to predict the named entities. This is a simplified version of it."
    ]
   },
   {
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.models import Model\n",
-    "from keras import layers\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Embedding, Dense, LSTM\n",
     "from keras import Input\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
     "from keras.utils.np_utils import to_categorical"
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We build the words (one of the inputs) and NER tags"
+    "### We build the words and NER sequence tags"
    ]
   },
   {
@@ -187,25 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We build the ner (the second input) and NER tags"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_pos, Y_ner = build_sequences(train_dict, key_x='ppos', key_y='ner')\n",
-    "print('First sentence, words', X_pos[1])\n",
-    "print('First sentence, POS', Y_ner[1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### We now extract the list of words, POS, and NER"
+    "### We now extract the list of unique words and NER"
    ]
   },
   {
@@ -215,11 +197,8 @@
    "outputs": [],
    "source": [
     "word_set = sorted(list(set([item for sublist in X_words for item in sublist])))\n",
-    "pos_set = sorted(list(set([item for sublist in X_pos for item in sublist])))\n",
     "ner_set = sorted(list(set([item for sublist in Y_ner for item in sublist])))\n",
     "print(len(word_set))\n",
-    "print(len(pos_set))\n",
-    "print(pos_set)\n",
     "print(len(ner_set))\n",
     "ner_set"
    ]
@@ -239,10 +218,8 @@
    "source": [
     "rev_word_idx = dict(enumerate(word_set, start=2))\n",
     "rev_ner_idx = dict(enumerate(ner_set, start=2))\n",
-    "rev_pos_idx = dict(enumerate(pos_set, start=2))\n",
     "word_idx = {v: k for k, v in rev_word_idx.items()}\n",
-    "ner_idx = {v: k for k, v in rev_ner_idx.items()}\n",
-    "pos_idx = {v: k for k, v in rev_pos_idx.items()}"
+    "ner_idx = {v: k for k, v in rev_ner_idx.items()}"
    ]
   },
   {
@@ -267,7 +244,6 @@
    "outputs": [],
    "source": [
     "print(X_words[1])\n",
-    "print(X_pos[1])\n",
     "Y_ner[1]"
    ]
   },
@@ -277,7 +253,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_pos_idx = [list(map(lambda x: pos_idx.get(x, 1), x)) for x in X_pos]\n",
     "X_words_idx = [list(map(lambda x: word_idx.get(x, 1), x)) for x in X_words]\n",
     "Y_ner_idx = [list(map(lambda x: ner_idx.get(x, 1), x)) for x in Y_ner]"
    ]
@@ -296,7 +271,6 @@
    "outputs": [],
    "source": [
     "print(X_words_idx[1])\n",
-    "print(X_pos_idx[1])\n",
     "Y_ner_idx[1]"
    ]
   },
@@ -313,7 +287,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_pos_idx = pad_sequences(X_pos_idx)\n",
     "X_words_idx = pad_sequences(X_words_idx)\n",
     "Y_ner_idx = pad_sequences(Y_ner_idx)"
    ]
@@ -325,7 +298,6 @@
    "outputs": [],
    "source": [
     "print(X_words_idx[1])\n",
-    "print(X_pos_idx[1])\n",
     "Y_ner_idx[1]"
    ]
   },
@@ -352,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The graph"
+    "## The sequential network"
    ]
   },
   {
@@ -369,68 +341,28 @@
    "outputs": [],
    "source": [
     "text_vocabulary_size = len(word_set) + 2\n",
-    "text_input = Input(shape=(None,), dtype='int32', name='text')\n",
-    "embedded_text = layers.Embedding(text_vocabulary_size, \n",
-    "                                 64, mask_zero=True)(text_input)\n",
-    "encoded_text = layers.LSTM(32, return_sequences=True)(embedded_text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The POS input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pos_vocabulary_size = len(pos_set) + 2\n",
-    "pos_input = Input(shape=(None,),\n",
-    "                       dtype='int32',\n",
-    "                       name='pos')\n",
-    "embedded_pos = layers.Embedding(pos_vocabulary_size, \n",
-    "                                32, mask_zero=True)(pos_input)\n",
-    "encoded_pos = layers.LSTM(16, return_sequences=True)(embedded_pos)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### We concatenate the two parts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "concatenated = layers.concatenate([encoded_text, encoded_pos],axis=-1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The common part"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ner_vocabulary_size = len(ner_set) + 2\n",
-    "ner = layers.Dense(ner_vocabulary_size,\n",
-    "                      activation='softmax')(concatenated)\n",
     "\n",
-    "model = Model([text_input, pos_input], ner)\n",
+    "model = Sequential()\n",
+    "model.add(Embedding(text_vocabulary_size,\n",
+    "                    64,\n",
+    "                    mask_zero=True))\n",
+    "model.add(LSTM(32, return_sequences=True))\n",
+    "model.add(Dense(len(ner_set) + 2, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compiling it "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model.compile(optimizer='rmsprop',\n",
     "              loss='categorical_crossentropy',\n",
     "              metrics=['acc'])"
@@ -449,9 +381,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit({'text': X_words_idx, 'pos': X_pos_idx}, Y_ner_idx_cat,\n",
+    "model.fit(X_words_idx, Y_ner_idx_cat,\n",
     "                  epochs=3, batch_size=128)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
