--- a/programs/5.5-multioutput.ipynb
+++ b/programs/5.5-multioutput.ipynb
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We build the words (one of the inputs) and NER tags"
+    "### We build the words and NER tags (the first output)"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We build the ner (the second input) and NER tags"
+    "### We build the words and POS tags (the second output)"
    ]
   },
   {
@@ -207,14 +207,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_words[1]"
+    "print('input:', X_words[1])\n",
+    "print('output 1:', Y_pos[1])\n",
+    "print('output 2:', Y_ner[1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We now extract the list of words, POS, and NER"
+    "### We now extract the list of unique words, POS, and NER"
    ]
   },
   {
@@ -458,6 +460,13 @@
     "          {'pos':Y_pos_idx_cat, 'ner':Y_ner_idx_cat},\n",
     "          epochs=5, batch_size=128)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
