renaming and simplification

--- a/programs/4.1-nn-pos-tagger.ipynb
+++ b/programs/4.1-nn-pos-tagger.ipynb
@@ -87,10 +87,10 @@
    "outputs": [],
    "source": [
     "def load_ud_en_ewt():\n",
-    "\n",
-    "    train_file = '../datasets/ud_en/en_ewt-ud-train.conllu'\n",
-    "    dev_file = '../datasets/ud_en/en_ewt-ud-dev.conllu'\n",
-    "    test_file = '../datasets/ud_en/en_ewt-ud-test.conllu'\n",
+    "    BASE_DIR = '/Users/pierre/Documents/Cours/EDAN20/corpus/ud-treebanks-v2.3/UD_English-EWT/'\n",
+    "    train_file = BASE_DIR + 'en_ewt-ud-train.conllu'\n",
+    "    dev_file = BASE_DIR + 'en_ewt-ud-dev.conllu'\n",
+    "    test_file = BASE_DIR + 'en_ewt-ud-test.conllu'\n",
     "    column_names = ['ID', 'FORM', 'LEMMA', 'UPOS', 'XPOS', \n",
     "                    'FEATS', 'HEAD', 'DEPREL', 'HEAD', 'DEPS', 'MISC']\n",
     "    column_names = list(map(str.lower, column_names))\n",
@@ -101,9 +101,10 @@
     "    return train_sentences, dev_sentences, test_sentences, column_names\n",
     "\n",
     "def load_conll2009_pos():\n",
-    "    train_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-train-pos.txt'\n",
-    "    dev_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-development-pos.txt'\n",
-    "    test_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-test-words-pos.txt'\n",
+    "    BASE_DIR = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/'\n",
+    "    train_file = BASE_DIR + 'CoNLL2009-ST-English-train-pos.txt'\n",
+    "    dev_file = BASE_DIR + 'CoNLL2009-ST-English-development-pos.txt'\n",
+    "    test_file = BASE_DIR + 'CoNLL2009-ST-test-words-pos.txt'\n",
     "    # test2_file = 'simple_pos_test.txt'\n",
     "\n",
     "    column_names = ['id', 'form', 'lemma', 'plemma', 'pos', 'ppos']\n",
@@ -114,8 +115,8 @@
     "    # test2_sentences = open(test2_file).read().strip()\n",
     "    return train_sentences, dev_sentences, test_sentences, column_names\n",
     "\n",
-    "#train_sentences, dev_sentences, test_sentences, column_names =\\\n",
-    "#load_conll2009_pos()\n",
+    "# train_sentences, dev_sentences, test_sentences, column_names = \\\n",
+    "# load_conll2009_pos()\n",
     "train_sentences, dev_sentences, test_sentences, column_names =\\\n",
     "load_ud_en_ewt()\n",
     "train_sentences[:100]"
@@ -358,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos_list = sorted(list(set(y_cat)))\n",
+    "pos_list = sorted(set(y_cat))\n",
     "NB_CLASSES = len(pos_list) + 1\n",
     "pos_list"
    ]
@@ -376,9 +377,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos_rev_idx = dict(enumerate(pos_list, start=1))\n",
-    "pos_idx = {v: k for k, v in pos_rev_idx.items()}\n",
-    "print(pos_rev_idx)\n",
+    "rev_pos_idx = dict(enumerate(pos_list, start=1))\n",
+    "pos_idx = {v: k for k, v in rev_pos_idx.items()}\n",
+    "print(rev_pos_idx)\n",
     "pos_idx"
    ]
   },
@@ -405,7 +406,7 @@
    "metadata": {},
    "source": [
     "## The Tagger\n",
-    "   With `sparse_categorical_crossentropy` we do not need to vectorize $\\mathbf{y}$ with `to_categorical`"
+    "   With `sparse_categorical_crossentropy`, we do not need to vectorize $\\mathbf{y}$ with `to_categorical`"
    ]
   },
   {
@@ -494,8 +495,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(pos_rev_idx[np.argmax(model.predict(X_test[0, :]))])\n",
-    "pos_rev_idx[y_test[0]]"
+    "print(rev_pos_idx[np.argmax(model.predict(X_test[0, :]))])\n",
+    "rev_pos_idx[y_test[0]]"
    ]
   },
   {
@@ -531,7 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_sentence(sentence, dict_vect, model, pos_rev_idx):\n",
+    "def predict_sentence(sentence, dict_vect, model, rev_pos_idx):\n",
     "    column_names = ['id', 'form']\n",
     "    sentence = list(enumerate(sentence.lower().split(), start=1))\n",
     "    conll_cols = ''\n",
@@ -560,7 +561,7 @@
     "    # print(X)\n",
     "    y_prob = model.predict(X)\n",
     "    y_pred = y_prob.argmax(axis=-1)\n",
-    "    y_pred_cat = [pos_rev_idx[i] for i in y_pred]\n",
+    "    y_pred_cat = [rev_pos_idx[i] for i in y_pred]\n",
     "    return y_pred_cat"
    ]
   },
@@ -578,17 +579,10 @@
     "    y_test_pred_cat = predict_sentence(sentence.lower(), \n",
     "                                       dict_vectorizer,\n",
     "                                       model,\n",
-    "                                       pos_rev_idx)\n",
+    "                                       rev_pos_idx)\n",
     "    print(sentence)\n",
     "    print(y_test_pred_cat)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
