--- a/programs/4.2-nn-pos-tagger-embeddings.ipynb
+++ b/programs/4.2-nn-pos-tagger-embeddings.ipynb
@@ -99,7 +99,7 @@
     "    for line in glove:\n",
     "        values = line.strip().split()\n",
     "        word = values[0]\n",
-    "        vector = np.array(values[1:], dtype='float32')\n",
+    "        vector = np.array(values[1:])\n",
     "        embeddings[word] = vector\n",
     "    glove.close()\n",
     "    embeddings_dict = embeddings\n",
@@ -140,10 +140,10 @@
    "outputs": [],
    "source": [
     "def load_ud_en_ewt():\n",
-    "\n",
-    "    train_file = '../datasets/ud_en/en_ewt-ud-train.conllu'\n",
-    "    dev_file = '../datasets/ud_en/en_ewt-ud-dev.conllu'\n",
-    "    test_file = '../datasets/ud_en/en_ewt-ud-test.conllu'\n",
+    "    BASE_DIR = '/Users/pierre/Documents/Cours/EDAN20/corpus/ud-treebanks-v2.3/UD_English-EWT/'\n",
+    "    train_file = BASE_DIR + 'en_ewt-ud-train.conllu'\n",
+    "    dev_file = BASE_DIR + 'en_ewt-ud-dev.conllu'\n",
+    "    test_file = BASE_DIR + 'en_ewt-ud-test.conllu'\n",
     "    column_names = ['ID', 'FORM', 'LEMMA', 'UPOS', 'XPOS', \n",
     "                    'FEATS', 'HEAD', 'DEPREL', 'HEAD', 'DEPS', 'MISC']\n",
     "    column_names = list(map(str.lower, column_names))\n",
@@ -154,9 +154,10 @@
     "    return train_sentences, dev_sentences, test_sentences, column_names\n",
     "\n",
     "def load_conll2009_pos():\n",
-    "    train_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-train-pos.txt'\n",
-    "    dev_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-development-pos.txt'\n",
-    "    test_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-test-words-pos.txt'\n",
+    "    BASE_DIR = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/'\n",
+    "    train_file = BASE_DIR + 'CoNLL2009-ST-English-train-pos.txt'\n",
+    "    dev_file = BASE_DIR + 'CoNLL2009-ST-English-development-pos.txt'\n",
+    "    test_file = BASE_DIR + 'CoNLL2009-ST-test-words-pos.txt'\n",
     "    # test2_file = 'simple_pos_test.txt'\n",
     "\n",
     "    column_names = ['id', 'form', 'lemma', 'plemma', 'pos', 'ppos']\n",
@@ -378,8 +379,8 @@
    "source": [
     "corpus_words = []\n",
     "for x in X_dict:\n",
-    "    corpus_words.extend(list(x.values()))\n",
-    "corpus_words = sorted(list(set(corpus_words)))\n",
+    "    corpus_words.extend(x.values())\n",
+    "corpus_words = sorted(set(corpus_words))\n",
     "print('# unique words seen in training corpus:', len(corpus_words))"
    ]
   },
@@ -419,8 +420,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "word_rev_idx = dict(enumerate(vocabulary_words, start=1))\n",
-    "word_idx = {v: k for k, v in word_rev_idx.items()}"
+    "rev_word_idx = dict(enumerate(vocabulary_words, start=1))\n",
+    "word_idx = {v: k for k, v in rev_word_idx.items()}"
    ]
   },
   {
@@ -441,7 +442,7 @@
     "for x_dict in X_dict:\n",
     "    for word in x_dict:\n",
     "        x_dict[word] = word_idx[x_dict[word]]\n",
-    "dict_vect = DictVectorizer()\n",
+    "dict_vect = DictVectorizer(sparse=False)\n",
     "X = dict_vect.fit_transform(X_dict)\n",
     "\n",
     "print('X shape', X.shape)\n",
@@ -466,8 +467,8 @@
     "NB_CLASSES = len(pos_list) + 1\n",
     "\n",
     "# We build a part-of-speech index. We keep 0 for unknown symbols in the test set\n",
-    "pos_rev_idx = dict(enumerate(pos_list, start=1))\n",
-    "pos_idx = {v: k for k, v in pos_rev_idx.items()}\n",
+    "rev_pos_idx = dict(enumerate(pos_list, start=1))\n",
+    "pos_idx = {v: k for k, v in rev_pos_idx.items()}\n",
     "\n",
     "# We encode y\n",
     "y = [pos_idx[i] for i in y_cat]\n",
@@ -515,7 +516,7 @@
     "                                input_length=2 * W_SIZE + 1))\n",
     "if embedding_matrix is not None:\n",
     "    model.layers[0].set_weights([embedding_matrix])\n",
-    "    model.layers[0].trainable = False\n",
+    "model.layers[0].trainable = True\n",
     "model.add(layers.Flatten())\n",
     "model.add(layers.Dense(NB_CLASSES, activation='softmax'))\n",
     "model.compile(loss='sparse_categorical_crossentropy',\n",
@@ -567,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_sentence(sentence, dict_vect, model, word_idx, pos_rev_idx):\n",
+    "def predict_sentence(sentence, dict_vect, model, word_idx, rev_pos_idx):\n",
     "    column_names = ['id', 'form']\n",
     "    sentence = list(enumerate(sentence.lower().split(), start=1))\n",
     "    conll_cols = ''\n",
@@ -594,7 +595,7 @@
     "    # print(X)\n",
     "    y_prob = model.predict(X)\n",
     "    y_pred = y_prob.argmax(axis=-1)\n",
-    "    y_pred_cat = [pos_rev_idx[i] for i in y_pred]\n",
+    "    y_pred_cat = [rev_pos_idx[i] for i in y_pred]\n",
     "    return y_pred_cat"
    ]
   },
@@ -612,17 +613,10 @@
     "    y_test_pred_cat = predict_sentence(sentence.lower(), \n",
     "                                       dict_vect,\n",
     "                                       model, word_idx, \n",
-    "                                       pos_rev_idx)\n",
+    "                                       rev_pos_idx)\n",
     "    print(sentence)\n",
     "    print(y_test_pred_cat)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
