--- a/programs/4.3-rnn-pos-tagger.ipynb
+++ b/programs/4.3-rnn-pos-tagger.ipynb
@@ -142,10 +142,10 @@
    "outputs": [],
    "source": [
     "def load_ud_en_ewt():\n",
-    "\n",
-    "    train_file = '../datasets/ud_en/en_ewt-ud-train.conllu'\n",
-    "    dev_file = '../datasets/ud_en/en_ewt-ud-dev.conllu'\n",
-    "    test_file = '../datasets/ud_en/en_ewt-ud-test.conllu'\n",
+    "    BASE_DIR = '/Users/pierre/Documents/Cours/EDAN20/corpus/ud-treebanks-v2.3/UD_English-EWT/'\n",
+    "    train_file = BASE_DIR + 'en_ewt-ud-train.conllu'\n",
+    "    dev_file = BASE_DIR + 'en_ewt-ud-dev.conllu'\n",
+    "    test_file = BASE_DIR + 'en_ewt-ud-test.conllu'\n",
     "    column_names = ['ID', 'FORM', 'LEMMA', 'UPOS', 'XPOS', \n",
     "                    'FEATS', 'HEAD', 'DEPREL', 'HEAD', 'DEPS', 'MISC']\n",
     "    column_names = list(map(str.lower, column_names))\n",
@@ -156,9 +156,10 @@
     "    return train_sentences, dev_sentences, test_sentences, column_names\n",
     "\n",
     "def load_conll2009_pos():\n",
-    "    train_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-train-pos.txt'\n",
-    "    dev_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-English-development-pos.txt'\n",
-    "    test_file = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/CoNLL2009-ST-test-words-pos.txt'\n",
+    "    BASE_DIR = '/Users/pierre/Documents/Cours/EDAN20/corpus/conll2009/en/'\n",
+    "    train_file = BASE_DIR + 'CoNLL2009-ST-English-train-pos.txt'\n",
+    "    dev_file = BASE_DIR + 'CoNLL2009-ST-English-development-pos.txt'\n",
+    "    test_file = BASE_DIR + 'CoNLL2009-ST-test-words-pos.txt'\n",
     "    # test2_file = 'simple_pos_test.txt'\n",
     "\n",
     "    column_names = ['id', 'form', 'lemma', 'plemma', 'pos', 'ppos']\n",
@@ -169,7 +170,8 @@
     "    # test2_sentences = open(test2_file).read().strip()\n",
     "    return train_sentences, dev_sentences, test_sentences, column_names\n",
     "\n",
-    "#train_sentences, dev_sentences, test_sentences, column_names = load_conll2009_pos()\n",
+    "# train_sentences, dev_sentences, test_sentences, column_names = \\\n",
+    "# load_conll2009_pos()\n",
     "train_sentences, dev_sentences, test_sentences, column_names =\\\n",
     "load_ud_en_ewt()\n",
     "train_sentences[:100]"
