--- a/programs/1.4-multiclass.ipynb
+++ b/programs/1.4-multiclass.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Neural Networks: Multiple Categories"
+    "# Introduction to Neural Networks: Multiple Categories\n",
+    "\n",
+    "Author: Pierre Nugues"
    ]
   },
   {
@@ -210,7 +212,9 @@
     "model.add(layers.Dense(10, activation='relu', input_shape=(4,)))\n",
     "model.add(layers.Dense(3, activation='softmax'))\n",
     "\n",
-    "model.compile(optimizer='nadam', loss='categorical_crossentropy', metrics=['accuracy'])"
+    "model.compile(optimizer='nadam', loss='categorical_crossentropy', \n",
+    "              metrics=['accuracy'])\n",
+    "model.summary()"
    ]
   },
   {
@@ -251,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With Keras, the $y$ vector needs to have a one-hot encoding"
+    "With Keras, the $y$ vector needs to have a one-hot encoding."
    ]
   },
   {
@@ -262,6 +266,7 @@
    "source": [
     "from keras.utils import to_categorical\n",
     "y_cat = to_categorical(y)\n",
+    "print('y:', y[:10])\n",
     "y_cat[:10]"
    ]
   },
@@ -286,7 +291,9 @@
     "\n",
     "history = model.fit(x_train, y_train, \n",
     "                    epochs=80, batch_size=1, \n",
-    "                    validation_data=(x_val, y_val_cat))"
+    "                    validation_data=(x_val, y_val_cat),\n",
+    "                   verbose=0)\n",
+    "model.evaluate(x_val, y_val_cat)"
    ]
   },
   {
@@ -302,8 +309,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc = history.history['acc']\n",
-    "val_acc = history.history['val_acc']\n",
+    "acc = history.history['accuracy']\n",
+    "val_acc = history.history['val_accuracy']\n",
     "loss = history.history['loss']\n",
     "val_loss = history.history['val_loss']\n",
     "\n",
@@ -317,8 +324,8 @@
     "plt.show()\n",
     "\n",
     "plt.clf()\n",
-    "acc_values = history.history['acc']\n",
-    "val_acc_values = history.history['val_acc']\n",
+    "acc_values = history.history['accuracy']\n",
+    "val_acc_values = history.history['val_accuracy']\n",
     "plt.plot(epochs, acc, 'bo', label='Training acc')\n",
     "plt.plot(epochs, val_acc, 'b', label='Validation acc')\n",
     "plt.title('Training and validation accuracy')\n",
@@ -338,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The prediction results a vector of probabilities"
+    "The prediction results in a vector of probabilities"
    ]
   },
   {
@@ -349,8 +356,10 @@
    },
    "outputs": [],
    "source": [
-    "print('Observation 121:\\n', model.predict(np.array([X[121]])))\n",
-    "print('Class of 121:\\n', np.argmax(model.predict(np.array([X[121]]))))"
+    "print('Observation 121')\n",
+    "print('Prediction probabilities:', model.predict(np.array([X[121]])))\n",
+    "print('Predicted class:', np.argmax(model.predict(np.array([X[121]]))))\n",
+    "print('Observed value:', y[121])"
    ]
   },
   {
@@ -423,9 +432,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
