--- a/programs/1.1-dataset and regression.ipynb
+++ b/programs/1.1-dataset and regression.ipynb
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use the mean squared error and nadam, a variant of stochastic gradient descent"
+    "We create the architecture. The model has an intercept (a bias) by default."
    ]
   },
   {
@@ -143,8 +143,38 @@
     "\n",
     "model = models.Sequential()\n",
     "model.add(Dense(1, input_dim=1, activation='linear'))\n",
-    "model.compile(optimizer='nadam', loss='mse', metrics=['mse'])\n",
-    "model.summary()\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use the mean squared error and nadam, a variant of stochastic gradient descent, to find the paramters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='nadam', loss='mse', metrics=['mse'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We fit the two parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "history = model.fit(x, y, batch_size=1, epochs=200, verbose=1)"
    ]
   },
@@ -189,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A model consists of linear parameters"
+    "The model is linear and consists of two parameters"
    ]
   },
   {
@@ -221,13 +251,6 @@
     "plt.ylabel(\"A count\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -246,9 +269,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
