--- a/programs/1.2-salammbo classification.ipynb
+++ b/programs/1.2-salammbo classification.ipynb
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us extend the data set to cover all the paragraphs, where we will count all the letters.<br/> Structure of the dataset:<br/>\n",
+    "Let us extend the dataset to cover all the paragraphs, where we will count all the letters.<br/> Structure of the dataset:<br/>\n",
     "\n",
     "|Obs.   | *x*                              |class   |\n",
     "|-------|----------------------------------|--------|\n",
@@ -150,9 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "salammbo_en = open('../../EDAN20/programs/corpus/Salammbo/salammbo_en.txt').read().strip().lower()\n",
@@ -175,6 +173,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We associate the characters with indices"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -186,13 +191,44 @@
     "\n",
     "dict_vec = DictVectorizer(sparse=False)\n",
     "dict_vec.fit(counts)\n",
+    "dict_vec.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We convert the dictionaries into matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_en = dict_vec.transform(counts_en)\n",
     "X_fr = dict_vec.transform(counts_fr)\n",
     "print(X_en.shape)\n",
-    "print(X_fr.shape)\n",
-    "\n",
+    "print(X_fr.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We stack the French and English datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X = np.vstack((X_en, X_fr))\n",
-    "y = [0] * len(counts_en) + [1] * len(counts_fr)"
+    "y = [0] * len(counts_en) + [1] * len(counts_fr)\n",
+    "X[:5,:]"
    ]
   },
   {
@@ -252,6 +288,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We standardize the dataset. This is very significant for the final result"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -263,7 +306,8 @@
     "std.fit(X_train)\n",
     "\n",
     "X_train = std.transform(X_train)\n",
-    "X_val = std.transform(X_val)"
+    "X_val = std.transform(X_val)\n",
+    "X_train[:3, :]"
    ]
   },
   {
@@ -278,6 +322,13 @@
    "metadata": {},
    "source": [
     "### The Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create a simple architecture. This is simply logistic regression"
    ]
   },
   {
@@ -297,10 +348,24 @@
     "model.compile(loss='binary_crossentropy',\n",
     "              optimizer='rmsprop',\n",
     "              metrics=['accuracy'])\n",
-    "model.summary()\n",
-    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And we fit the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "history = model.fit(X_train, y_train, epochs=20, batch_size=32, \n",
-    "                    validation_data=(X_val, y_val), verbose=1)"
+    "                    validation_data=(X_val, y_val), verbose=0)"
    ]
   },
   {
@@ -318,8 +383,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "acc = history.history['acc']\n",
-    "val_acc = history.history['val_acc']\n",
+    "acc = history.history['accuracy']\n",
+    "val_acc = history.history['val_accuracy']\n",
     "loss = history.history['loss']\n",
     "val_loss = history.history['val_loss']\n",
     "epochs = range(1, len(acc) + 1)\n",
@@ -405,6 +470,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We build a more complex model with two layers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -420,8 +492,22 @@
     "model.compile(loss='binary_crossentropy',\n",
     "              optimizer='rmsprop',\n",
     "              metrics=['accuracy'])\n",
-    "model.summary()\n",
-    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And we fit it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "history = model.fit(X_train, y_train, epochs=20, batch_size=32, \n",
     "                    validation_data=(X_val, y_val), verbose=0)"
    ]
@@ -441,8 +527,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "acc = history.history['acc']\n",
-    "val_acc = history.history['val_acc']\n",
+    "acc = history.history['accuracy']\n",
+    "val_acc = history.history['val_accuracy']\n",
     "loss = history.history['loss']\n",
     "val_loss = history.history['val_loss']\n",
     "epochs = range(1, len(acc) + 1)\n",
@@ -512,9 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model.get_weights()"
@@ -544,9 +628,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
