--- a/programs/1.3-logistic regression.ipynb
+++ b/programs/1.3-logistic regression.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Neural Networks: Logistic Regression and Loss"
+    "# Introduction to Neural Networks: Logistic Regression and Loss\n",
+    "\n",
+    "Author: Pierre Nugues"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initial Dataset from Berkson on Using Logistic Regression for Classification (1944)"
+    "Initial Dataset from Berkson on *Using Logistic Regression for Classification* (1944)"
    ]
   },
   {
@@ -69,6 +71,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A simple logictic regression architecture"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -81,8 +90,25 @@
     "\n",
     "model = Sequential()\n",
     "model.add(Dense(1, input_dim=1, activation='sigmoid'))\n",
-    "model.compile(optimizer='nadam', loss='binary_crossentropy', metrics=['acc'])\n",
-    "history = model.fit(X, y, epochs=50, verbose=1)\n",
+    "model.compile(optimizer='nadam', loss='binary_crossentropy', \n",
+    "              metrics=['accuracy'])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We fit it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model.fit(X, y, epochs=50, verbose=0)\n",
     "model.evaluate(X, y)"
    ]
   },
@@ -94,7 +120,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "acc = history.history['acc']\n",
+    "acc = history.history['accuracy']\n",
     "loss = history.history['loss']\n",
     "epochs = range(1, len(acc) + 1)\n",
     "plt.plot(epochs, acc, 'ro', label='Training acc')\n",
@@ -120,9 +146,15 @@
     "The crossentropy loss is defined as:\n",
     "$\n",
     "H(P,M) = - \\frac{1}{|X|} \\sum\\limits_{x \\in X} {P(x)\\log M(x),} \n",
-    "$\n",
-    "\n",
-    "First, a simple example:"
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First, a simple example:\n",
+    "We draw individuals"
    ]
   },
   {
@@ -134,13 +166,58 @@
     "from math import log\n",
     "\n",
     "random_observations = np.random.choice(X.shape[0], 6, replace = False)\n",
-    "print(random_observations)\n",
+    "print(random_observations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which dose did they ingest and what was the outcome?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_choice = list(X[random_observations])\n",
     "print('Dose:', X_choice)\n",
     "y_choice = list(y[random_observations])\n",
-    "print('Observed class:', y_choice)\n",
+    "print('Observed class:', y_choice)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the predicted outcome?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "probs_raw = list(map(model.predict, X_choice))\n",
-    "print('Predicted probs for class 1:', probs_raw)\n",
+    "print('Predicted probs for class 1:', probs_raw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us compute the cross-entropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "probs = [log(p) * y + log(1 - p) * (1 - y) for p, y in zip(probs_raw, y_choice)]\n",
     "print('Crossentropy per observation:', probs)\n",
     "entropy = -sum(probs)/6\n",
@@ -151,15 +228,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, we compute it over the whole training set"
+    "### The whole dataset\n",
+    "We compute it over the whole training set"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "probs_raw = list(map(model.predict, X))\n",
@@ -191,9 +267,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
