--- a/programs/2.1-convolution.ipynb
+++ b/programs/2.1-convolution.ipynb
@@ -232,7 +232,10 @@
     "               [0,0,0],\n",
     "               [1,2,1]])\n",
     "Gx = convolve(input_img, Dx)\n",
-    "Gy = convolve(input_img, Dy)"
+    "Gy = convolve(input_img, Dy)\n",
+    "\n",
+    "Gx_norm = np.maximum(Gx, 0)/np.max(Gx)\n",
+    "Gy_norm = np.maximum(Gy, 0)/np.max(Gy)"
    ]
   },
   {
@@ -250,9 +253,9 @@
    "source": [
     "plt.figure(figsize=(8,4))\n",
     "f,(p0, p1, p2)=plt.subplots(ncols=3)\n",
-    "p0.imshow(input_img,cmap=plt.cm.gray)\n",
-    "p1.imshow(Gx,cmap=plt.cm.gray)\n",
-    "p2.imshow(Gy,cmap=plt.cm.gray)"
+    "p0.imshow(input_img, cmap=plt.cm.gray)\n",
+    "p1.imshow(Gx_norm, cmap=plt.cm.gray)\n",
+    "p2.imshow(Gy_norm, cmap=plt.cm.gray)"
    ]
   },
   {
@@ -268,8 +271,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "norm = np.sqrt(Gx*Gx + Gy*Gy)\n",
-    "theta = np.arctan(Gy/Gx)"
+    "norm = np.sqrt(Gx*Gx + Gy*Gy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta = np.arctan(Gy/(Gx + 10**-10))"
    ]
   },
   {
@@ -289,7 +300,7 @@
    "source": [
     "plt.figure(figsize=(8,4))\n",
     "f,(p1,p2) = plt.subplots(ncols=2)\n",
-    "p1.imshow(norm,cmap=plt.cm.gray)\n",
+    "p1.imshow(norm, cmap=plt.cm.gray)\n",
     "p2.imshow(theta)"
    ]
   }
@@ -310,9 +321,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
