--- a/programs/3.1-SVD.ipynb
+++ b/programs/3.1-SVD.ipynb
@@ -73,9 +73,9 @@
     "    :param chars:\n",
     "    :return:\n",
     "    \"\"\"\n",
-    "    rev_doc_idx = {idx: file for idx, file in enumerate(documents)}\n",
-    "    doc_idx = {value: key for key, value in rev_doc_idx.items()}\n",
-    "    return doc_idx, rev_doc_idx\n",
+    "    idx_doc = {idx: file for idx, file in enumerate(documents)}\n",
+    "    doc_idx = {value: key for key, value in idx_doc.items()}\n",
+    "    return doc_idx, idx_doc\n",
     "\n",
     "\n",
     "def build_idx_from_dict(chars):\n",
@@ -86,9 +86,9 @@
     "    :param chars:\n",
     "    :return:\n",
     "    \"\"\"\n",
-    "    rev_char_idx = {idx: char for idx, char in enumerate(sorted(chars.keys()))}\n",
-    "    char_idx = {value: key for key, value in rev_char_idx.items()}\n",
-    "    return char_idx, rev_char_idx"
+    "    idx_char = {idx: char for idx, char in enumerate(sorted(chars.keys()))}\n",
+    "    char_idx = {value: key for key, value in idx_char.items()}\n",
+    "    return char_idx, idx_char"
    ]
   },
   {
@@ -130,23 +130,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_matrix(doc_idx, rev_doc_idx, char_idx, rev_char_idx, counts_by_chapter):\n",
+    "def build_matrix(doc_idx, idx_doc, char_idx, idx_char, counts_by_chapter):\n",
     "    X = np.zeros((len(doc_idx.keys()), len(char_idx.keys())))\n",
-    "    for i in rev_doc_idx.keys():\n",
-    "        for j in rev_char_idx.keys():\n",
-    "            if rev_char_idx[j] in counts_by_chapter[i]:\n",
-    "                X[i, j] = counts_by_chapter[i][rev_char_idx[j]]\n",
+    "    for i in idx_doc.keys():\n",
+    "        for j in idx_char.keys():\n",
+    "            if idx_char[j] in counts_by_chapter[i]:\n",
+    "                X[i, j] = counts_by_chapter[i][idx_char[j]]\n",
     "    return X\n",
     "\n",
     "\n",
-    "def print_matrix(rev_doc_idx, rev_char_idx, X):\n",
+    "def print_matrix(idx_doc, idx_char, X):\n",
     "    print(\",\", end='')\n",
-    "    for i in rev_char_idx.keys():\n",
-    "        print(rev_char_idx[i], \", \", end='')\n",
+    "    for i in idx_char.keys():\n",
+    "        print(idx_char[i], \", \", end='')\n",
     "    print()\n",
-    "    for i in rev_doc_idx.keys():\n",
-    "        print(rev_doc_idx[i], \", \", end='')\n",
-    "        for j in rev_char_idx.keys():\n",
+    "    for i in idx_doc.keys():\n",
+    "        print(idx_doc[i], \", \", end='')\n",
+    "        for j in idx_char.keys():\n",
     "            print(X[i, j], \", \", end='')\n",
     "        print()"
    ]
@@ -209,9 +209,9 @@
     "ec = [base + file for file in english_chapters]\n",
     "fc = [base + file for file in french_chapters]\n",
     "# Document index and reverse index\n",
-    "doc_idx, rev_doc_idx = build_idx_from_list(y)\n",
+    "doc_idx, idx_doc = build_idx_from_list(y)\n",
     "print(doc_idx)\n",
-    "print(rev_doc_idx)"
+    "print(idx_doc)"
    ]
   },
   {
@@ -249,10 +249,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "char_idx, rev_char_idx = build_idx_from_dict(total_counts)\n",
+    "char_idx, idx_char = build_idx_from_dict(total_counts)\n",
     "# Character index and reverse index\n",
     "print(char_idx)\n",
-    "print(rev_char_idx)"
+    "print(idx_char)"
    ]
   },
   {
@@ -268,9 +268,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = build_matrix(doc_idx, rev_doc_idx, char_idx, rev_char_idx, counts_by_chapter)\n",
-    "print_matrix(rev_doc_idx, rev_char_idx, X)\n",
-    "print_matrix(rev_char_idx, rev_doc_idx, X.T)"
+    "X = build_matrix(doc_idx, idx_doc, char_idx, idx_char, counts_by_chapter)\n",
+    "print_matrix(idx_doc, idx_char, X)\n",
+    "print_matrix(idx_char, idx_doc, X.T)"
    ]
   },
   {
@@ -474,6 +474,13 @@
     "    ax.text(Us[i, 0], Us[i, 1], Us[i, 2], yt[i])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -492,9 +499,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
