--- a/programs/1.4-multiclass.ipynb
+++ b/programs/1.4-multiclass.ipynb
@@ -284,12 +284,12 @@
    "outputs": [],
    "source": [
     "x_train = X[:120]\n",
-    "y_train= y_cat[:120]\n",
+    "y_train_cat = y_cat[:120]\n",
     "x_val = X[120:]\n",
     "y_val_cat = y_cat[120:]\n",
     "y_val = y[120:]\n",
     "\n",
-    "history = model.fit(x_train, y_train, \n",
+    "history = model.fit(x_train, y_train_cat, \n",
     "                    epochs=80, batch_size=1, \n",
     "                    validation_data=(x_val, y_val_cat),\n",
     "                   verbose=0)\n",
@@ -406,6 +406,93 @@
     "loss = -sum([log(x_val_prob[i, y_val[i]]) \n",
     "             for i in range(len(y_val))])/len(y_val)\n",
     "loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Another way to encode the targets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The encoding of the target can be tedious. We can use `sparse_categorical_crossentropy` to simplify it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model2 = models.Sequential()\n",
+    "model2.add(layers.Dense(10, activation='relu', input_shape=(4,)))\n",
+    "model2.add(layers.Dense(3, activation='softmax'))\n",
+    "\n",
+    "model2.compile(optimizer='nadam', loss='sparse_categorical_crossentropy', \n",
+    "              metrics=['accuracy'])\n",
+    "model2.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We do not need to use a one-hot encoding for $y$. Although more intuitive, this encoding no longer shows its relation to cross entropy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = X[:120]\n",
+    "y_train= y[:120]\n",
+    "x_val = X[120:]\n",
+    "y_val = y[120:]\n",
+    "y_val[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We fit the model with $y$ classes encoded as integers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model2.fit(x_train, y_train, \n",
+    "                    epochs=80, batch_size=1, \n",
+    "                    validation_data=(x_val, y_val),\n",
+    "                   verbose=0)\n",
+    "model2.evaluate(x_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And we obtain the same results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('The original categories:\\n', y[121:126])\n",
+    "print('The predicted probabilities:\\n', model2.predict(X[121:126]))\n",
+    "print('The predicted classes:\\n', list(map(np.argmax, model2.predict(X[121:126]))))"
    ]
   },
   {
