--- a/programs/3.1-SVD.ipynb
+++ b/programs/3.1-SVD.ipynb
@@ -364,12 +364,12 @@
    "outputs": [],
    "source": [
     "U, s, Vt = np.linalg.svd(X_scaled, full_matrices=False)\n",
-    "print(np.shape(U), np.shape(Vt))\n",
+    "print('Shape:', np.shape(U), np.shape(Vt))\n",
     "print('s:', s)\n",
-    "print(len(s))\n",
+    "print('Length of diag.:', len(s))\n",
     "\n",
     "cumulative_inertia = np.cumsum(s)\n",
-    "print(list(cumulative_inertia))"
+    "print('Cumulative inertia:', list(cumulative_inertia))"
    ]
   },
   {
@@ -406,9 +406,7 @@
     "Us = U @ np.diag(s)\n",
     "# Axes may have opposed orientation. This is to have the same figure\n",
     "I = np.identity(len(s))\n",
-    "I[0, 0] = -1\n",
-    "I[1, 1] = -1\n",
-    "Us = Us @ I\n",
+    "Us = Us @ (-I)\n",
     "Us"
    ]
   },
