improved the code

--- a/programs/4.1-nn-pos-tagger.ipynb
+++ b/programs/4.1-nn-pos-tagger.ipynb
@@ -87,7 +87,7 @@
    "outputs": [],
    "source": [
     "def load_ud_en_ewt():\n",
-    "    BASE_DIR = '/Users/pierre/Documents/Cours/EDAN20/corpus/ud-treebanks-v2.3/UD_English-EWT/'\n",
+    "    BASE_DIR = '/Users/pierre/Documents/Cours/EDAN20/corpus/ud-treebanks-v2.4/UD_English-EWT/'\n",
     "    train_file = BASE_DIR + 'en_ewt-ud-train.conllu'\n",
     "    dev_file = BASE_DIR + 'en_ewt-ud-dev.conllu'\n",
     "    test_file = BASE_DIR + 'en_ewt-ud-test.conllu'\n",
@@ -119,7 +119,7 @@
     "# load_conll2009_pos()\n",
     "train_sentences, dev_sentences, test_sentences, column_names =\\\n",
     "load_ud_en_ewt()\n",
-    "train_sentences[:100]"
+    "train_sentences[:350]"
    ]
   },
   {
@@ -377,9 +377,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rev_pos_idx = dict(enumerate(pos_list, start=1))\n",
-    "pos_idx = {v: k for k, v in rev_pos_idx.items()}\n",
-    "print(rev_pos_idx)\n",
+    "idx_pos = dict(enumerate(pos_list, start=1))\n",
+    "pos_idx = {v: k for k, v in idx_pos.items()}\n",
+    "print(idx_pos)\n",
     "pos_idx"
    ]
   },
@@ -495,8 +495,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(rev_pos_idx[np.argmax(model.predict(X_test[0, :]))])\n",
-    "rev_pos_idx[y_test[0]]"
+    "print(model.predict(X_test[0, :]))\n",
+    "print(idx_pos[np.argmax(model.predict(X_test[0, :]))])\n",
+    "idx_pos[y_test[0]]"
    ]
   },
   {
@@ -532,7 +533,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_sentence(sentence, dict_vect, model, rev_pos_idx):\n",
+    "def predict_sentence(sentence, dict_vect, model, idx_pos):\n",
     "    column_names = ['id', 'form']\n",
     "    sentence = list(enumerate(sentence.lower().split(), start=1))\n",
     "    conll_cols = ''\n",
@@ -561,7 +562,7 @@
     "    # print(X)\n",
     "    y_prob = model.predict(X)\n",
     "    y_pred = y_prob.argmax(axis=-1)\n",
-    "    y_pred_cat = [rev_pos_idx[i] for i in y_pred]\n",
+    "    y_pred_cat = [idx_pos[i] for i in y_pred]\n",
     "    return y_pred_cat"
    ]
   },
@@ -579,7 +580,7 @@
     "    y_test_pred_cat = predict_sentence(sentence.lower(), \n",
     "                                       dict_vectorizer,\n",
     "                                       model,\n",
-    "                                       rev_pos_idx)\n",
+    "                                       idx_pos)\n",
     "    print(sentence)\n",
     "    print(y_test_pred_cat)"
    ]
@@ -601,9 +602,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
