--- a/programs/4.3-rnn-pos-tagger.ipynb
+++ b/programs/4.3-rnn-pos-tagger.ipynb
@@ -142,7 +142,7 @@
    "outputs": [],
    "source": [
     "def load_ud_en_ewt():\n",
-    "    BASE_DIR = '/Users/pierre/Documents/Cours/EDAN20/corpus/ud-treebanks-v2.3/UD_English-EWT/'\n",
+    "    BASE_DIR = '/Users/pierre/Documents/Cours/EDAN20/corpus/ud-treebanks-v2.4/UD_English-EWT/'\n",
     "    train_file = BASE_DIR + 'en_ewt-ud-train.conllu'\n",
     "    dev_file = BASE_DIR + 'en_ewt-ud-dev.conllu'\n",
     "    test_file = BASE_DIR + 'en_ewt-ud-test.conllu'\n",
@@ -371,10 +371,10 @@
    "source": [
     "# We start at one to make provision for the padding symbol 0 \n",
     "# in RNN and LSTMs and 1 for the unknown words\n",
-    "rev_word_idx = dict(enumerate(vocabulary_words, start=2))\n",
-    "rev_pos_idx = dict(enumerate(pos, start=2))\n",
-    "word_idx = {v: k for k, v in rev_word_idx.items()}\n",
-    "pos_idx = {v: k for k, v in rev_pos_idx.items()}\n",
+    "idx_word = dict(enumerate(vocabulary_words, start=2))\n",
+    "idx_pos = dict(enumerate(pos, start=2))\n",
+    "word_idx = {v: k for k, v in idx_word.items()}\n",
+    "pos_idx = {v: k for k, v in idx_pos.items()}\n",
     "print('word index:', list(word_idx.items())[:10])\n",
     "print('POS index:', list(pos_idx.items())[:10])\n",
     "\n",
@@ -406,7 +406,7 @@
     "\n",
     "# The number of POS classes and 0 (padding symbol)\n",
     "Y_train = to_categorical(Y, num_classes=len(pos) + 2)\n",
-    "print(Y_train[0])"
+    "Y_train[0]"
    ]
   },
   {
@@ -474,9 +474,9 @@
     "model.layers[0].set_weights([embedding_matrix])\n",
     "# The default is True\n",
     "model.layers[0].trainable = True\n",
-    "model.add(SimpleRNN(100, return_sequences=True))\n",
+    "# model.add(SimpleRNN(100, return_sequences=True))\n",
     "# model.add(Bidirectional(SimpleRNN(100, return_sequences=True)))\n",
-    "# model.add(Bidirectional(LSTM(100, return_sequences=True)))\n",
+    "model.add(Bidirectional(LSTM(100, return_sequences=True)))\n",
     "model.add(Dense(NB_CLASSES + 2, activation='softmax'))"
    ]
   },
@@ -617,7 +617,7 @@
     "pos_pred = []\n",
     "for sentence in pos_pred_num:\n",
     "    pos_pred_idx = list(map(np.argmax, sentence))\n",
-    "    pos_pred_cat = list(map(rev_pos_idx.get, pos_pred_idx))\n",
+    "    pos_pred_cat = list(map(idx_pos.get, pos_pred_idx))\n",
     "    pos_pred += [pos_pred_cat]\n",
     "\n",
     "print(pos_pred[:2])\n",
@@ -670,21 +670,18 @@
    "outputs": [],
    "source": [
     "def predict_sentence(sentence, model, word_idx, \n",
-    "                     vocabulary_words, rev_idx_pos, verbose=False):\n",
+    "                     vocabulary_words, idx_pos, verbose=False):\n",
     "    # Predict one sentence\n",
     "    sentence = sentence.split()\n",
     "    word_idxs = to_index([sentence], word_idx)\n",
-    "    word_idx_padded = pad_sequences(word_idxs)\n",
     "\n",
-    "    pos_idx_pred = model.predict(word_idx_padded)\n",
-    "    # We remove padding\n",
-    "    pos_idx_pred = pos_idx_pred[0][-len(sentence):]\n",
-    "    pos_idx = list(map(np.argmax, pos_idx_pred))\n",
-    "    pos = list(map(rev_idx_pos.get, pos_idx))\n",
+    "    pos_idx_pred = model.predict(word_idxs)\n",
+    "    pos_idxs = list(map(np.argmax, pos_idx_pred))\n",
+    "    pos = list(map(idx_pos.get, pos_idxs))\n",
     "    if verbose:\n",
     "        print('Sentence', sentence)\n",
     "        print('Sentence word indexes', word_idxs)\n",
-    "        print('Padded sentence', word_idx_padded)\n",
+    "        #print('Padded sentence', word_idx_padded)\n",
     "        print('POS predicted', pos_idx_pred[0])\n",
     "        print('POS shape', pos_idx_pred.shape)\n",
     "    return pos"
@@ -704,17 +701,10 @@
     "    y_test_pred_cat = predict_sentence(sentence.lower(), \n",
     "                                       model, word_idx, \n",
     "                                       vocabulary_words, \n",
-    "                                       rev_pos_idx)\n",
+    "                                       idx_pos)\n",
     "    print(sentence)\n",
     "    print(y_test_pred_cat)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -733,9 +723,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
